# squads-mpl

./: .gitignore  Anchor.toml  Anchor.toml.example  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  index.js  package.json  sec3-report.sarif  tsconfig.json
.github/workflows/: test.yml
app/: cli.js  index.ts  package.json  tsconfig.json
crate/: Cargo.toml  README.md
crate/src/: lib.rs
helpers/: approve.ts  roles.ts  sdkExecute.ts  transactions.ts
idl/: mesh.ts  program_manager.ts  roles.ts  squads_mpl.ts  txmeta.ts  validator.ts
programs/mesh/: Cargo.toml
programs/mesh/src/: errors.rs  lib.rs
programs/mesh/src/state/: mesh.rs  mod.rs
programs/program-manager/: Cargo.toml  README.md
programs/program-manager/src/: lib.rs
programs/program-manager/src/state/: mod.rs  pm.rs
programs/roles/: Cargo.toml  README.md
programs/roles/src/: README.md  account.rs  errors.rs  lib.rs
programs/roles/src/state/: mod.rs  roles.rs
programs/schedule/: Cargo.toml
programs/schedule/src/: lib.rs
programs/squads-mpl/: Cargo.toml  README.md
programs/squads-mpl/src/: account.rs  errors.rs  lib.rs  state.rs  util.rs
programs/squads-mpl/src/state/: aux.rs  mod.rs  ms.rs
programs/txmeta/: Cargo.toml
programs/txmeta/src/: lib.rs
programs/validator/: Cargo.toml
programs/validator/src/: lib.rs
programs/validator/src/state/: mod.rs  validator.rs
sdk/: README.md  build.sh  constants.ts  index.ts  package.json  tsconfig.json
sdk/lib/: index.d.ts  index.js
sdk/lib/helpers/: transactions.d.ts  transactions.js
sdk/lib/idl/: mesh.json  program_manager.json  roles.json  squads_mpl.d.ts  squads_mpl.js  squads_mpl.json  txmeta.json  validator.json
sdk/lib/sdk/src/: address.d.ts  address.js  beets.d.ts  beets.js  constants.d.ts  constants.js  index.d.ts  index.js  tx_builder.d.ts  tx_builder.js  types.d.ts
sdk/src/: address.ts  beets.ts  index.ts  tx_builder.ts  types.ts
sdk/tests/: index.ts
tests/: squads-mpl.ts
