[package]
name = "program-manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
spl-token = {version = "3.1.0", features = ["no-entrypoint"]}
squads-mpl = { path = "../squads-mpl", features = ["cpi"] }