[package]
name = "squads-mpl"
version = "1.3.0"
description = "Squads Multisig Program Library"
authors = ["Sean Lars Ganser <sean@sqds.io>", "Bastien Guillaumat <bastien@sqds.io>"]
homepage = "https://squads.so"
repository = "https://github.com/squads-dapp/squads-mpl"
edition = "2018"
keywords = ["squads", "solana", "program", "smart-contract", "multisig"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "squads_mpl"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
default-env = "0.1.1"
solana-security-txt = "1.0.1"
